--- a/index.html
+++ b/index.html
@@ -74,11 +74,27 @@
             </div>
         </section>
 
+        <!-- Closed Trades -->
+        <section class="closed-trades-section">
+            <h2>📁 Closed Trades</h2>
+            <div id="closedTradesContainer" class="closed-trades-container">
+                <!-- Closed trades will be inserted here -->
+            </div>
+        </section>
+
         <!-- Strategy Performance -->
         <section class="strategy-section">
             <h2>🎯 Strategy Performance</h2>
             <div id="strategyContainer" class="strategy-grid">
                 <!-- Strategies will be inserted here -->
+            </div>
+        </section>
+
+        <!-- Lessons Learned -->
+        <section class="lessons-section">
+            <h2>📚 Lessons Learned</h2>
+            <div id="lessonsContainer" class="lessons-container">
+                <!-- Lessons will be inserted here -->
             </div>
         </section>
 
